--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- TODO -->
-    <title>YOUR NAME</title>
+    <title>Evan Spiering</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
