Updated description and image

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <!-- ******HEADER****** -->
     <header class="header">
         <div class="container">
-            <img class="profile-image img-responsive pull-left" src="assets/images/avatar.png" alt="Avatar" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/HeadShot.jpg" alt="Avatar" />
             <div class="profile-content pull-left">
                 <!-- TODO -->
-                <h1 class="name">YOUR NAME</h1>
+                <h1 class="name">Evan Spiering</h1>
                 <!-- TODO -->
-                <h2 class="desc">YOUR TITLE</h2>
+                <h2 class="desc">Game Developer</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item">
                         <!-- TODO --> <a href="http://www.linkedin.com/">
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <!-- TODO --> <a href="#">
+                        <!-- TODO --> <a href="https://github.com/BvnnyGaming">
                             <i class="fa fa-github-alt"></i>
                         </a>
                     </li>
@@ -76,11 +76,14 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <!-- TODO -->
-                            <p> I have been solving problems in Java since I was but a suckling on my mother's bosom.
-                                I have a degree in Computer Science from a prestigious R1 university. (It's CMU!).
-                                Pls hire me, I literally need food. This is a template of dev portfolio. It is a work in
-                                progress. Slow
-                                progress. But progress nonetheless.
+                            <p> I have been programming since I was thirteen years old working on projects in 
+                                Scratch then soon transitioning into Unity. For the 8 years I have been steadily growing
+                                my unity and C# knowledge along with branching out into Java, Python, HTML, CSS, JS, C++, and MySQL.
+                                All of these come in handy as a game developer because you never know what your next
+                                project will require. Throughout all of my game projects and tests I have exercised
+                                and tested so many different technical skills. Generics, machine learning, procedural generation,
+                                various optimization problem, and multiplayer server architecture are all skills that I have
+                                built up throughout my many years programming with Unity and other languages.
                                 Come back later for some updates and news! </p>
                         </div>
                         <!--//content-->
